--- a/templates/index.html
+++ b/templates/index.html
@@ -94,9 +94,9 @@
                   {% else %}
                      <img class="img-fluid" src="{% static 'blog/img/banner/blog.png' %}" alt="{{ post.title }}">
                   {% endif %}
-                  <ul class="thumb-info">
+                  <ul class="thumb-info" style="max-width: 550px;">
                     <li><a href="#"><i class="ti-user"></i>{{ post.author }}</a></li>
-                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at|date:"F d, Y, g:i a" }}</a></li>
+                    <li><a href="#"><i class="ti-notepad"></i>{{ post.published_at|date:"M d, Y, g:i a" }}</a></li>
                     <li><a href="#"><i class="ti-themify-favicon"></i>{{ post.comments_amount }} Comments</a></li>
                   </ul>
                 </div>
