--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     {% load static %}
-    <link rel="stylesheet" href="{% static 'blog/styles.min.css' %}">
+    <link rel="stylesheet" href="{% static 'blog/css/styles.min.css' %}">
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
@@ -48,7 +48,8 @@
       <!--================Hero Banner start =================-->
       <section class="mb-30px">
         <div class="container">
-          <div class="hero-banner" style="background-image: url('{% static 'blog/img/hero-banner.png' %}'); background-size: cover; background-position: center; height: 400px; position: relative;">
+          <div class="hero-banner"
+               style="background-image: url('{% static 'blog/img/banner/hero-banner.png' %}'); background-size: cover; background-position: center; height: 400px; position: relative;">
             <div class="hero-banner__content" style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; text-align: center;">
               <h3>Tours &amp; Travels</h3>
               <h1>Amazing Places on earth</h1>
@@ -234,6 +235,6 @@
     </footer>
     <!--================ End Footer Area =================-->
 
-    <script src="{% static 'blog/scripts.js' %}"></script>
+    <script src="{% static 'blog/js/scripts.js' %}"></script>
   </body>
 </html>
