--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -83,8 +83,8 @@
               <p>{{ post.text }}</p>
               <div class="news_d_footer flex-column flex-sm-row">
                 <a href="#"><span class="align-middle mr-2"><i class="ti-heart"></i></span>
-                  {% if post.likes %}
-                    {{ post.likes }} people like this
+                  {% if post.likes_amount %}
+                    {{ post.likes_amount }} people like this
                   {% else %}
                     0 people like this
                   {% endif %}
@@ -92,7 +92,7 @@
                 <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#">
                   <span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>
                   {% if post.comments %}
-                    {{ post.comments.count }} Comments
+                    {{ post.comments|length }} Comments
                   {% else %}
                     0 Comments
                   {% endif %}
@@ -108,16 +108,15 @@
 
 
             <div class="comments-area">
-              <h4>03 Comments</h4>
+              <h4>{{ post.comments|length }} Comments</h4>
+              {% for comment in post.comments %}
               <div class="comment-list">
                 <div class="single-comment justify-content-between d-flex">
                   <div class="user justify-content-between d-flex">
                     <div class="desc">
-                      <h5><a href="#">Emilly Blunt</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">
-                          Never say goodbye till the end comes!
-                      </p>
+                      <h5><a href="#">{{ comment.author }}</a></h5>
+                      <p class="date">{{ comment.published_at|date:"M d, Y, g:i a" }}</p>
+                      <p class="comment">{{ comment.text }}</p>
                     </div>
                   </div>
                   <div class="reply-btn">
@@ -125,38 +124,7 @@
                   </div>
                 </div>
               </div>
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Maria Luna</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">
-                          Never say goodbye till the end comes!
-                      </p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                          <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>
-              <div class="comment-list">
-                <div class="single-comment justify-content-between d-flex">
-                  <div class="user justify-content-between d-flex">
-                    <div class="desc">
-                      <h5><a href="#">Ina Hayes</a></h5>
-                      <p class="date">December 4, 2017 at 3:12 pm </p>
-                      <p class="comment">
-                          Never say goodbye till the end comes!
-                      </p>
-                    </div>
-                  </div>
-                  <div class="reply-btn">
-                          <a href="" class="btn-reply text-uppercase">reply</a>
-                  </div>
-                </div>
-              </div>
+              {% endfor %}
             </div>
           </div>
 
