--- a/templates/blog-details.html
+++ b/templates/blog-details.html
@@ -14,7 +14,8 @@
         <nav aria-label="breadcrumb" class="banner-breadcrumb">
           <ol class="breadcrumb">
             <li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Blog Details</li>
+            <li class="breadcrumb-item active" aria-current="page">Blog Details
+            </li>
           </ol>
         </nav>
       </div>
@@ -30,7 +31,7 @@
       <div class="col-lg-8">
         <div class="main_blog_details">
           <img class="img-fluid"
-               src="{% if post.image_url %}{{ post.image_url }}{% else %}{% static 'blog/img/banner/blog.png' %}{% endif %}" alt="{{ post.title }}">
+            src="{% if post.image_url %}{{ post.image_url }}{% else %}{% static 'blog/img/banner/blog.png' %}{% endif %}" alt="{{ post.title }}">
           <h4>{{ post.title }}</h4>
           <div class="user_details">
             <div class="mt-sm-0 mt-3">
@@ -47,17 +48,19 @@
             <a href="#"><span class="align-middle mr-2">
               <i class="ti-heart" style="color: red;"></i></span>
               {% if post.likes_amount %}
-                {{ post.likes_amount }} people like this
+              {{ post.likes_amount }} people like this
               {% else %}
-                0 people like this
+              0 people like this
               {% endif %}
             </a>
-            <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2" href="#">
-              <span class="align-middle mr-2"><i class="ti-themify-favicon"></i></span>
+            <a class="justify-content-sm-center ml-sm-auto mt-sm-0 mt-2"
+              href="#">
+              <span class="align-middle mr-2"><i
+                class="ti-themify-favicon"></i></span>
               {% if post.comments %}
-                {{ post.comments|length }} Comments
+              {{ post.comments|length }} Comments
               {% else %}
-                0 Comments
+              0 Comments
               {% endif %}
             </a>
             <div class="news_socail ml-sm-auto mt-sm-0 mt-2">
@@ -97,7 +100,9 @@
             <h4 class="single-sidebar-widget__title">Newsletter</h4>
             <div class="form-group mt-30">
               <div class="col-autos">
-                <input type="text" class="form-control" id="inlineFormInputGroup" placeholder="Enter email" onfocus="this.placeholder = ''"
+                <input type="text" class="form-control"
+                  id="inlineFormInputGroup" placeholder="Enter email"
+                  onfocus="this.placeholder = ''"
                   onblur="this.placeholder = 'Enter email'">
               </div>
             </div>
@@ -105,7 +110,8 @@
           </div>
 
           <div class="single-sidebar-widget post-category-widget">
-            <h4 class="single-sidebar-widget" style="height:200px;">Здесь будет реклама</h4>
+            <h4 class="single-sidebar-widget" style="height:200px;">Здесь
+              будет реклама</h4>
           </div>
         </div>
       </div>
